--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 command = "yarn install && yarn build"
-publish = ".next"
+publish = "out"
 
 [build.environment]
 NETLIFY_NEXT_PLUGIN_SKIP_FORMS = "true"
