--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
 command = "yarn install && yarn build"
-publish = "out"
+publish = ".next"
 
 [build.environment]
-NETLIFY_NEXT_PLUGIN_SKIP_FORMS = "true"
 NODE_VERSION = "20"
 YARN_ENABLE_IMMUTABLE_INSTALLS = "false"
+NETLIFY_NEXT_PLUGIN_SKIP_FORMS = "true"
