--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,10 @@
 [build]
 command = "yarn install && yarn build"
+publish = ".next"
+
+[[plugins]]
+package = "@netlify/plugin-nextjs"
 
 [build.environment]
 NODE_VERSION = "20"
 YARN_ENABLE_IMMUTABLE_INSTALLS = "false"
-NETLIFY_NEXT_PLUGIN_SKIP_FORMS = "true"
